# sdl2-playproject

./: .clang-tidy  .clang_complete  .gitattributes  .gitignore  .gitmodules  .tmuxp.yaml  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
.github/workflows/: ci.yaml
cmake/: FindEntityX.cmake  FindJansson.cmake  FindSDL2.cmake  clang-format.cmake  clang-tidy.cmake
resources/: COPYING
resources/etc/: spritesheets.json
resources/manifests/: sprites.json  spritesheets.json
src/: actor.h  bullet.cpp  bullet.h  config.h  enemy.cpp  enemy.h  game.cpp  game.h  game_panel.cpp  game_panel.h  hero.c  hero.cpp  input.cpp  input.h  main.c  main.cpp  main.h  player.cpp  player.h  resource.cpp  resource.h  ship.cpp  ship.h  stage.cpp  stage.h  stats.h  util.c  util.cpp  util.h
src/components/: body.h  bullet.h  collideable.h  enemy.h  geometry.h  identity.h  parent.h  player.h  renderable.h
src/systems/: body.cpp  body.h  collision.cpp  collision.h  geometry.cpp  geometry.h  physics.cpp  physics.h  player.cpp  player.h  render.cpp  render.h  spawn.cpp  spawn.h
